--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 
             <img src="passport photo.jpg" alt="Your Profile Picture" class="profile-picture">
 
-            <h1>Pranesh S</h1>
+            <h1>PK.Khanishga</h1>
 
             <p>Am Mechanical Engineer</p>
 
