--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 
             <h1>PK.Khanishga</h1>
 
-            <p>Am Mechanical Engineer</p>
+            <p>I'm a Student</p>
 
         </div>
 
@@ -232,17 +232,13 @@
 
             <h2>About Me</h2>
 
-            <p>I'm a <b>web development</b> expert who is passionate about creating dynamic and user-friendly websites. 
+            <p>I'm a <b>Computer Applications student</b> About Me
 
-                I'm driven by the desire to craft high-performance web applications that enhance user experience and provide
+I'm a very much Dedicated and detail-oriented BCA student with a strong foundation in programming, software development, and database management. 
 
-                 seamless digital solutions. With over 7 years of experience in the field, I'm dedicated to staying up to date 
+I'm Passionate about learning new technologies and applying problem-solving skills to real-world challenges. Seeking an opportunity to contribute my technical skills and grow in a dynamic work environment.
 
-                 with the latest trends and innovations in the 
-
-                 web development landscape. I'm also committed to helping others learn more about web technologies, 
-
-                 best practices, and how to build secure and scalable websites.</p>
+</p>
 
 
 
