--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 
             <h1>PK.Khanishga</h1>
 
-            <p>I'm a Student</p>
+            <p>Aspiring Student</p>
 
         </div>
 
@@ -254,7 +254,7 @@ I'm Passionate about learning new technologies and applying problem-solving skil
 
             <h2>Education</h2>
 
-            <p>Deemed University  - Mech</p>
+            <p>Deemed University of Madras-BCA</p>
 
             
 
@@ -274,23 +274,15 @@ I'm Passionate about learning new technologies and applying problem-solving skil
 
             <ul>
 
-                <li>React</li>
-
-                <li>Mern</li>
-
-                <li>Cloud Computing</li>
-
                 <li>Python</li>
-
-                <li>Spring</li>
-
-                <li>ML & AI</li>
-
-                <li>java</li>
 
                 <li>c++</li>
 
-                <li>Java script</li>
+                <li>java</li>
+
+                <li>Data structures</li>
+
+                <li>Web Development</li>
 
             </ul>
 
@@ -308,13 +300,11 @@ I'm Passionate about learning new technologies and applying problem-solving skil
 
             <ul>
 
-                <li><a href="#">E Cart website</a></li>
+                <li><a href="#">Data science e certification BCG</a></li>
 
-                <li><a href="#">Cloud Security IBM</a></li>
+                <li><a href="#">Data analytics Accenture e-certification</a></li>
 
-                <li><a href="#">IBM chatbot</a></li>
-
-                <li><a href="#">College Portal</a></li> 
+                <li><a href="#">AI and ML Internship YBI</a></li>
 
                 <!-- Add more project links here -->
 
@@ -336,7 +326,7 @@ I'm Passionate about learning new technologies and applying problem-solving skil
 
             <h2>Resume</h2>
 
-            <a href="file.pdf" target="_blank" class="download-button">Download CV</a>
+            <a href=593c1d14-9081-4acc-bb37-e14454941206.pdf_20250318_145754_0000.pdf> target="_blank" class="download-button">Download CV</a>
 
         </center>
 
@@ -350,7 +340,7 @@ I'm Passionate about learning new technologies and applying problem-solving skil
 
     <footer>
 
-        <p>&copy; 2025 Pranesh S</p>
+        <p>&copy; 2025 PK.Khanishga</p>
 
     </footer>
 
