--- a/index.html
+++ b/index.html
@@ -192,11 +192,11 @@
 
             <!-- Add your profile picture here -->
 
-            <img src="passport photo.jpg" alt="Your Profile Picture" class="profile-picture">
+            <img src="Khanishga.jpg" alt="Your Profile Picture" class="profile-picture">
 
             <h1>PK.Khanishga</h1>
 
-            <p>Aspiring Student</p>
+            <p>Aspiring Computer Applications Student</p>
 
         </div>
 
@@ -232,7 +232,7 @@
 
             <h2>About Me</h2>
 
-            <p>I'm a <b>Computer Applications student</b> About Me
+            <p>I'm a <b>Computer Applications student</b>
 
 I'm a very much Dedicated and detail-oriented BCA student with a strong foundation in programming, software development, and database management. 
 
@@ -326,7 +326,7 @@ I'm Passionate about learning new technologies and applying problem-solving skil
 
             <h2>Resume</h2>
 
-            <a href=593c1d14-9081-4acc-bb37-e14454941206.pdf_20250318_145754_0000.pdf> target="_blank" class="download-button">Download CV</a>
+            <a href=KhaniResume.pdf> target="_blank" class="download-button">Download CV</a>
 
         </center>
 
