--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 
             <!-- Add your profile picture here -->
 
-            <img src="Khanishga.jpg" alt="Your Profile Picture" class="profile-picture">
+            <img src="https://github.com/khanishga/Portfolio/blob/main/Khanishga.jpg" alt="Your Profile Picture" class="profile-picture">
 
             <h1>PK.Khanishga</h1>
 
