--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@ I'm Passionate about learning new technologies and applying problem-solving skil
 
             <h2>Resume</h2>
 
-            <a href=https://github.com/khanishga/Portfolio/blob/main/KhaniResume.pdf> target="_blank" class="download-button">Download CV</a>
+           <a href="https://raw.githubusercontent.com/khanishga/Portfolio/main/KhaniResume.pdf" target="_blank" class="download-button">Download CV</a>
 
         </center>
 
