--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@ I am seeking an opportunity in the IT industry where I can apply my knowledge, l
 
                 <li><a href="https://github.com/khanishga/Portfolio/blob/main/Accenture.pdf">Data analytics Accenture e-certification</a></li>
 
-                <li><a href="#">AI and ML Internship YBI</a></li>
+                <li><a href="https://github.com/khanishga/Portfolio/blob/main/ybicerti.pdf">AI and ML Internship YBI</a></li>
 
                 <!-- Add more project links here -->
 
