--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@ I am seeking an opportunity in the IT industry where I can apply my knowledge, l
 
             <ul>
 
-                <li><a href="https://github.com/khanishga/Portfolio/blob/main/bcg%20certificate.pdf">Data science e certification BCG</a></li>
+                <li><a href="https://github.com/khanishga/Portfolio/blob/main/bcg%20certi.png">Data science e certification BCG</a></li>
 
                 <li><a href="https://github.com/khanishga/Portfolio/blob/main/Accenture.pdf">Data analytics Accenture e-certification</a></li>
 
